<resources>
    <string name="app_name">CST2335 Lab 2</string>
    <string name="love_android">I love Android</string>
    <string name="switch_text">Switch on/off</string>
    <string name="press_me">Press Me</string>
    <string name="check_this_out">Check this out!</string>
    <string name="toast_message">Label has been updated.</string>
    <string name="checkbox_now">The checkbox is now</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="undo">Undo</string>
    <string name="flag_description">Flag</string>
</resources>
