<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:gravity="fill"
        android:text="@string/love_android"
        android:textSize="30dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="0dp"
        android:layout_height="133dp"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_rowSpan="2"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/flag_description"
        android:gravity="fill"
        android:scaleType="fitCenter"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switchButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_row="1"
        android:gravity="fill"
        android:text="@string/switch_text" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:gravity="fill"
        android:text="@string/press_me" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:gravity="fill"
        android:text="@string/check_this_out" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:gravity="fill"
        android:hint="@string/love_android"
        android:inputType="text" />
</GridLayout>
